--- a/RVC-Ipywidgets.ipynb
+++ b/RVC-Ipywidgets.ipynb
@@ -7,9 +7,9 @@
         "id": "VL0OVvxoyscm"
       },
       "source": [
-        "# **RVC Ipywidgets**\n",
+        "# **Simple RVC**\n",
         "\n",
-        "**Project cooked by [Phạm Huỳnh Anh](https://github.com/PhamHuynhAnh16)**"
+        "**Project originally cooked by [Phạm Huỳnh Anh](https://github.com/PhamHuynhAnh16)**"
       ]
     },
     {
@@ -31,12 +31,8 @@
         "\n",
         "print(\"Installing...\")\n",
         "\n",
-        "!git clone https://github.com/PhamHuynhAnh16/RVC-Ipywidgets /content/RVC > /dev/null 2>&1\n",
+        "!git clone https://github.com/terastudio-org/Simple-RVC.git /content/RVC > /dev/null 2>&1\n",
         "\n",
-        "for item in os.listdir(\"/content/RVC\"):\n",
-        "    shutil.move(os.path.join(\"/content\", \"RVC\", item), \"/content/\")\n",
-        "\n",
-        "!rm -rf /content/RVC\n",
         "!pip install -r /content/requirements.txt --no-cache-dir -q > /dev/null 2>&1\n",
         "\n",
         "os.makedirs(\"rvc_models\", exist_ok=True)\n",
